--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 */
 version = "1.0"
 group= "me.doclic.minecraft.mods.addons" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+archivesBaseName = "doclicaddons"
 
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
