--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.0"
+version = "vPre-21.07a"
 group= "me.doclic.minecraft.mods.addons" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "doclicaddons"
 
